@@ -28,13 +28,13 @@
  <alias from="properties" to="base_metadata"/>
  <alias from="sharing" to="folder_localrole_form"/>
  <alias from="view" to="(selected layout)"/>
- <alias from="manage_page" to="manage_collage"/>
+ <alias from="compose_page" to="manage_collage"/>
  <action title="View" action_id="view" category="object" condition_expr=""
     url_expr="string:${folder_url}/" visible="True">
   <permission value="View"/>
  </action>
- <action title="Manage page" action_id="manage_page" category="object" condition_expr=""
-    url_expr="string:${object_url}/manage_page" visible="True">
+ <action title="Manage page" action_id="compose_page" category="object" condition_expr=""
+    url_expr="string:${object_url}/compose_page" visible="True">
   <permission value="Modify portal content"/>
  </action>
  <action title="Edit" action_id="edit" category="object" condition_expr=""
